--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fitness-tracker-app-backend",
   "version": "1.0.0",
   "description": "FYP Backend",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,16 +11,13 @@
     "url": "git+https://github.com/ahsanatta96/fitness-tracker-app-backend.git"
   },
   "keywords": [
-    "FYP",
-    "Backend",
-    "Fitness",
-    "Tracker",
-    "App"
+    "FYP Backend",
+    "Fitness Tracker App"
   ],
   "author": "Ahsan Atta",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ahsanatta96/fitness-tracker-app-backend/issues"
+    "url": "https://github.com/ahsanatta96/fitness-tracker-app-backend/"
   },
   "homepage": "https://github.com/ahsanatta96/fitness-tracker-app-backend#readme",
   "dependencies": {
