--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/ahsanatta96/fitness-tracker-app-backend#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.3"
   }
 }
