--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "fitness-tracker-app-backend",
   "version": "1.0.0",
   "description": "FYP Backend",
-  "main": "src/index.js",
+  "main": "backend/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon backend/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,15 @@
   "homepage": "https://github.com/ahsanatta96/fitness-tracker-app-backend#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "express": "^4.18.3"
+    "bcryptjs": "^2.4.3",
+    "chalk": "^2.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongo-sanitize": "^1.1.0",
+    "mongoose": "^8.3.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
