--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^8.3.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
